# ods

./: Cargo.toml  README.md  publisher.toml
src/: lib.rs  main.rs
src/commands/: mod.rs
src/commands/generate/: mod.rs
src/commands/lint/: mod.rs
src/commands/lint/rules/: macro_def.rs  mod.rs  needs_explicit_sources.rs  needs_metric_description.rs  needs_source_description.rs  no_duplicate_metrics.rs  no_duplicate_pageviews.rs  no_duplicate_sources.rs  uses_name_case.rs
src/generate/: mod.rs
src/lint/: mod.rs
src/lint/rules/: cache.rs  macro_def.rs  mod.rs  needs_description.rs  needs_explicit_sources.rs  needs_metric_description.rs  needs_source_description.rs  no_duplicate_metrics.rs  no_duplicate_pageviews.rs  no_duplicate_sources.rs  uses_name_case.rs
src/schema/: mod.rs  spec.rs
tests/: generate.rs  lint.rs  lint_rules.rs
tests/fixtures/lint/: lints_file_not_selected
tests/fixtures/lint/basic/: bad.yaml  good.yaml
tests/fixtures/lint/change_levels/: error.yaml  off.yaml
tests/fixtures/lint/lints_file/: error.yaml  lints.yaml  warn.yaml
tests/fixtures/lint/lints_file_override/: lints.yaml  warn.yaml
tests/fixtures/lint/rules/needs_explicit_sources/: basic.yaml  sources.yaml
tests/snapshots/lint/lints_file/: stdout.txt
tests/snapshots/lint/lints_file_not_selected/: stdout.txt
tests/snapshots/lint/lints_file_override/: stdout.txt
tests/snapshots/lint/rules/: needs_explicit_sources.txt  needs_metric_description.txt  no_duplicate_metrics.txt  no_duplicate_pageviews.txt  no_duplicate_sources.txt  uses_name_case.txt
(+27 files in other folders)
